# injector

./: .gitignore  pyproject.toml  pytest.ini  tox.ini
injector/: __init__.py  aio_task_scope.py  injector.py
tests/: aio_task_scope_test.py  dataclasses_test.py  injector_test.py
