[tool.black]
line-length = 110
target_version = ['py36', 'py37']
skip_string_normalization = true


[tool.poetry]
name = "injector"
version = "0.16.2"
description = ""
authors = ["Alec Thomas"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
pytest-asyncio = "^0.10.0"
tox-pyenv = "^1.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
